--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=5000
 
-DB_USER
+DB_USER=test-assignment
 DB_HOST=test-instance-1-cluster.cluster-cys30lik4v4w.us-east-1.rds.amazonaws.com
-DB_NAME
+DB_NAME=test_assignment
 DB_PASSWORD=gfdjh24m,sddsf
 DB_PORT=5432
