--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "nodemon": "^3.0.3",
     "pg": "^8.11.3"
   }
 }
